Updated main.js to properly display temp, wind, humidity, also added a conditional that checks if a specified city has the value of cloudy, rainy, sunny, if so it assigns the state variable a value of an emjoi then uses string interpolation to set it beside the city. Wrapped entire main.js file inside a event listener to check if html page has finished loading. updated css so that the cards of the 5day forecast were colored correctly.

--- a/assets/style.css
+++ b/assets/style.css
@@ -1,10 +1,23 @@
+:root {
+    --blue: rgb(24, 44, 100);
+    --navy: rgb(31, 57, 94);
+}
+
 
 header {
     color: white;
-    background-color: rgb(24, 44, 100);
+    background-color: var(--blue);
     height: 50px;
     font-size: 30px;
     
+}
+
+
+
+section .card {
+    background-color: var(--navy);
+    margin-left: 10px;
+    color: white;
 }
 
 
